# learn-godot

./: .gitignore  default_bus_layout.tres  en.po  export_presets.cfg  flake.nix  messages.pot  project.godot  translations.csv  translations.csv.import
addons/bdragon/: Blue Effect Bullet Impact Explosion 32x32.png.import  CREDITS.txt  Green Effect Bullet Impact Explosion 32x32.png.import  Purple Effect Bullet Impact Explosion 32x32.png.import  Red Effect Bullet Impact Explosion 32x32.png.import  Yellow Effect Bullet Impact Explosion 32x32.png.import
addons/brackeys/fonts/: PixelOperator8-Bold.ttf.import  PixelOperator8.ttf.import
addons/brackeys/music/: time_for_adventure.mp3.import
addons/brackeys/sounds/: explosion.wav.import  tap.wav.import
addons/brackeys/sprites/: coin.png.import  (+3 more)
assets/: coin.tscn  default_theme.tres  kill_trigger.tscn  platform.tscn  player.tscn  projectile.tscn  score_display.tscn  world_tileset.tres
assets/components/: collectable_component.gd  collectable_component.tscn  hitbox_component.gd  hitbox_component.tscn
assets/enemy/: green_slime.tscn  purple_slime.tscn
assets/pickups/: coin.gd  coin.tscn  fruit.tscn
assets/sprites/: player_sprite.tres  readme.md  water_anim.png.import  water_anim.xcf
godot/: Rust.gdextension  icon.svg.import  project.godot
godot/assets/: player.tscn
godot/scenes/: game.tscn
rust/: Cargo.toml
rust/src/: lib.rs  player.rs
scenes/: auto_load.tscn  game.tscn  menu.tscn
scripts/: coin.gd  game_manager.gd  kill_trigger.gd  main_menu.gd  player.gd  projectile.gd  score_display.gd  slime.gd
(+7 files in other folders)
